Implementacion -se implementa al proyecto inyeccion de dependencia con dagger hilt -se reajusta el codigo a clean Architecture

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -54,6 +55,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
     implementation("androidx.activity:activity-ktx:$activity_version")
+    implementation 'androidx.fragment:fragment-ktx:1.4.1'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -61,6 +63,10 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:4.13.0"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
+
+    //dagger hilt
+    implementation "com.google.dagger:hilt-android:2.40.5"
+    kapt "com.google.dagger:hilt-android-compiler:2.40.5"
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
