--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,13 @@
 
     <application
         android:allowBackup="true"
+        android:name=".AudioBoomApp"
         android:icon="@mipmap/ic_inicio"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AudioBoom">
         <activity
-            android:name=".mainModule.view.activity.MainActivity"
+            android:name=".ui.view.activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
